kubernetes/devops/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 261bbbccc4b406ec6f0a2675581daa89f088ba5e
    app.quarkus.io/build-timestamp: 2021-11-08 - 00:35:22 +0000
  labels:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.3-SNAPSHOT
  name: questionarios-api
  namespace: questionarios
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.3-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 261bbbccc4b406ec6f0a2675581daa89f088ba5e
    app.quarkus.io/build-timestamp: 2021-11-08 - 00:35:22 +0000
  labels:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.3-SNAPSHOT
  name: questionarios-api
  namespace: questionarios
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: questionarios-api
      app.kubernetes.io/version: 1.0.3-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 261bbbccc4b406ec6f0a2675581daa89f088ba5e
        app.quarkus.io/build-timestamp: 2021-11-08 - 00:35:22 +0000
      labels:
        app.kubernetes.io/name: questionarios-api
        app.kubernetes.io/version: 1.0.3-SNAPSHOT
      namespace: questionarios
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  key: db-url
                  name: db-configmap
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: db-username
                  name: db-configmap
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db-password
                  name: db-secret
          image: alejandrotrilla/questionarios-api:1.0.4-SNAPSHOT
          imagePullPolicy: Always
          name: questionarios-api
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 64Mi
      serviceAccount: questionarios-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 261bbbccc4b406ec6f0a2675581daa89f088ba5e
    app.quarkus.io/build-timestamp: 2021-11-08 - 00:35:22 +0000
  labels:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.3-SNAPSHOT
  name: questionarios-api
  namespace: questionarios
spec:
  rules:
    - host: questionarios.com.ar
      http:
        paths:
          - backend:
              service:
                name: questionarios-api
                port:
                  name: http
            path: /
            pathType: Prefix
